# GamDev

./: .gitignore  README.md
GML_tutorials/platformer/: platformer.yyp
GML_tutorials/platformer/views/: 0cddb4d9-7127-4398-b963-e722ebd5b1b7.yy  2103d633-05c4-43de-96f6-954a6c0f6e1c.yy  3cd6b3d0-763e-48a4-90a0-da0cd26dce83.yy  56444960-cd85-4c76-bdb3-6beac6576c8d.yy  6d49c44d-ef3c-403e-a442-753c559657ba.yy  6dc6dfba-3656-4f44-8e27-7539d570dee0.yy  6e7e2ac7-8a58-4987-a569-f9dfff49c621.yy  a9dcdb67-67d0-41ea-9e6d-63312fe7a764.yy  be2b7a13-06af-4f96-ac97-8a532365dda6.yy  cbda3d20-3332-4b0d-b899-4b28be5336d6.yy  e0de244d-761a-45aa-b7b7-84768149bde7.yy  e102bf0f-2c06-42cd-95ff-5c28b85be3f7.yy  e267ff7a-d27d-4214-808d-856e03baba39.yy  e3cafe53-008d-4259-951d-865b08bfdf41.yy  edd100d2-27d0-4656-bce6-b8925efaf078.yy  fdc83cf2-8842-4b01-a4bf-6052dd72e79e.yy
GML_tutorials/space_rocks/: space_rocks.yyp
GML_tutorials/space_rocks/views/: 04d7cccb-6466-4548-a722-cf7fc9f24562.yy  074321e3-7158-4a09-b456-c61e78e6d458.yy  0baae95e-4517-4fd5-bc6b-04a1dd39afb8.yy  1ba0ff8c-f839-44ff-a446-3d7de67ee2a5.yy  5a198fad-9e8e-4fc3-a4b7-9b57f1de94aa.yy  5fcdf02d-0b3c-43fc-ae06-97922ccb0cc2.yy  (+10 more)
SDL_tutorials/include/: game.hpp  gameobject.hpp  map.hpp  texturemanager.hpp
SDL_tutorials/src/: game.cpp  gameobject.cpp  texturemanager.cpp
tutorials/: CMakeLists.txt
tutorials/assets/: enemy
tutorials/include/: components.hpp  ecs.hpp  game.hpp  gameobject.hpp  texturemanager.hpp
tutorials/src/: game.cpp  gameobject.cpp  main.cpp  map.cpp  texturemanager.cpp
(+46 files in other folders)
